--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Splash Screen -->
 <div id="splash">
     <div class="logo">🔥</div>
-    <h1>To-Do Streak</h1>
+    <h1>To-Do Streakify</h1>
     <p>Maintain your consistency</p>
 </div>
 
